--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Langues:</strong></div>
-              <div class="col-sm-8">Français (natal) ,  Anglais (scolaire)</div>
+              <div class="col-sm-8">Français (natif) ,  Anglais (scolaire)</div>
             </div>
           </div>
         </div>
