--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Developpeur Web & Web mobile</div>
-            <p>Actuellement en formation de 9 mois a l'AFPA de Chartres(28700). Formation de développeur web & web mobile full stack. Notions de HTML / CSS / Node.js / Mongodb / Sql / Angular (lol) / Java / JavaScript</p>
+            <p>Actuellement en formation de 9 mois a l'AFPA de Chartres(28700). Formation de développeur web & web mobile full stack. 
+            Langages : HTML, CSS, Java, JavaScript, PHP, Node.js, SQL, MongoDB.
+            Frameworks : Bootstrap, Symfony, WordPress.
+            </p>
           </div>
         </div>
       </div>
