--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
           <div class="card-body">
             <div class="h5">Developpeur Web & Web mobile</div>
             <p>Actuellement en formation de 9 mois a l'AFPA de Chartres(28700). Formation de développeur web & web mobile full stack. 
-            Langages : HTML, CSS, Java, JavaScript, PHP, Node.js, SQL, MongoDB.
-            Frameworks : Bootstrap, Symfony, WordPress.
+            <br>Langages : HTML, CSS, Java, JavaScript, PHP, Node.js, SQL, MongoDB.
+            <br>Frameworks : Bootstrap, Symfony, WordPress.
             </p>
           </div>
         </div>
