--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/benjamin.yodiz" rel="tooltip" title="Suis moi sur Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Pas de twitter atm"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/benjamin-frappin-0aa6011a9/" rel="tooltip" title="Retrouves moi sur Linkedin"><i class="fa fa-linkedin"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/benjamin.yodiz" rel="tooltip" title="Retrouvez moi sur Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/Benjamin_WebDev" rel="tooltip" title="Retrouvez moi sur twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/benjamin-frappin-0aa6011a9/" rel="tooltip" title="Retrouvez moi sur Linkedin"><i class="fa fa-linkedin"></i></a></div>
         </div>
       </div>
     </div>
