--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/benjamin.yodiz" rel="tooltip" title="Retrouvez moi sur Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/Benjamin_WebDev" rel="tooltip" title="Retrouvez moi sur twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/benjamin-frappin-0aa6011a9/" rel="tooltip" title="Retrouvez moi sur Linkedin"><i class="fa fa-linkedin"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/Benjamin-F-Web-Dev-104661144651825" rel="tooltip" title="Retrouvez moi sur Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/Benjamin_WebDev" rel="tooltip" title="Retrouvez moi sur twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/benjamin-frappin-0aa6011a9/" rel="tooltip" title="Retrouvez moi sur Linkedin"><i class="fa fa-linkedin"></i></a></div>
         </div>
       </div>
     </div>
@@ -68,23 +68,23 @@
           <div class="card-body">
             <div class="h4 mt-0 title">Informations Générales</div>
             <div class="row">
-              <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Age :</strong></div>
               <div class="col-sm-8">30</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Email :</strong></div>
               <div class="col-sm-8">benjamin.frappin@gmail.com</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Téléphone:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Téléphone :</strong></div>
               <div class="col-sm-8">06 59 96 50 38</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Addresse:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Addresse :</strong></div>
               <div class="col-sm-8">3 clos saint rémy 28700 AUNEAU</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Langues:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Langues :</strong></div>
               <div class="col-sm-8">Français (natif) ,  Anglais (scolaire)</div>
             </div>
           </div>
@@ -218,7 +218,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Récéptionnaire</div>
+            <div class="h5">Logisticien</div>
             <p> Récéptionnaire au sein de la société de machinisme agricole Amazone SA. Chargé de récéption , contrôle et entreposage de la marchandise. Gestion de stock et de personnel.</p>
           </div>
         </div>
