--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 <div class="section">
   <div class="container cc-education">
-    <div class="h4 text-center mb-4 title">Diplômes</div>
+    <div class="h4 text-center mb-4 title">Diplômes & Formations </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
