--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">A propos de moi :</div>
             <p>Bonjour ! Je m'appelle Benjamin FRAPPIN, actuellement en formation de Développeur web & web mobile.</p>
-            <p>Je suis actuellement à la recherche d'un stage d'une durée de deux mois, de developpeur web full stack afin de valider ma formation.</p>
+            <p>Je suis actuellement à la recherche d'un stage d'une durée de deux mois (du 21/09/2020 au 27/11/2020) , de developpeur web full stack afin de valider ma formation.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
