--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Adresse :</strong></p>
-                    <p class="pb-2">3 clos saint rémy 28700 AUNEAU</p>
-                    <p class="mb-0"><strong>Numéro téléphone :</strong></p>
-                    <p class="pb-2">06 59 96 50 38</p>
+                    <p class="pb-2">AUNEAU 28700</p>
+                  //  <p class="mb-0"><strong>Numéro téléphone :</strong></p>
+                  //   <p class="pb-2">06 59 96 50 38</p>
                     <p class="mb-0"><strong>Email :</strong></p>
                     <p>benjamin.frappin@gmail.com</p>
                   </div>
