--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
               <div class="col-sm-4"><strong class="text-uppercase">Email :</strong></div>
               <div class="col-sm-8">benjamin.frappin@gmail.com</div>
             </div>
-            <div class="row mt-3">
+         <!--   <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Téléphone :</strong></div>
               <div class="col-sm-8">06 59 96 50 38</div>
-            </div>
+            </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Addresse :</strong></div>
-              <div class="col-sm-8">3 clos saint rémy 28700 AUNEAU</div>
+              <div class="col-sm-8">AUNEAU 28700</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Langues :</strong></div>
