--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
                   <div class="card-body">
                     <p class="mb-0"><strong>Adresse :</strong></p>
                     <p class="pb-2">AUNEAU 28700</p>
-                  //  <p class="mb-0"><strong>Numéro téléphone :</strong></p>
-                  //   <p class="pb-2">06 59 96 50 38</p>
+                  <!-- <p class="mb-0"><strong>Numéro téléphone :</strong></p>
+                     <p class="pb-2">06 59 96 50 38</p> -->
                     <p class="mb-0"><strong>Email :</strong></p>
                     <p>benjamin.frappin@gmail.com</p>
                   </div>
